# PA_Agent

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  start_pa_agent.bat  智能体部署方法.txt
.github/workflows/: sync-upstream.yml
config/: .gitignore  README.md  settings.example.json
docs/: PA_Agent使用文档.md  图表K线与分析快照说明.md  获取数据功能说明.md
pa_agent/: app_context.py
pa_agent/ai/: decision_continuity.py  decision_stance.py  decision_tree.py  deepseek_client.py  json_validator.py  prompt_assembler.py  router.py  session_ledger.py  stage2_normalizer.py  trace_normalize.py  trace_semantic_checks.py
pa_agent/config/: env_loader.py  settings.py
prompt_engineering/: 上涨通道交易策略.txt  上涨通道分析识别.txt  下跌通道交易策略.txt  下跌通道分析识别.txt  二元决策.txt  市场诊断框架.txt  提示词大纲_人设与思维方式.txt  文件13-窄通道与宽通道策略.txt  文件14-楔形形态分析交易.txt  文件15-二次入场机会.txt  文件16-K线信号识别.txt  文件17-止损和止盈与仓位管理.txt  文件18-突破失败与突破测试.txt  文件19-H1H2-L1L2计数.txt  文件20-AlwaysIn与20GB.txt  文件21-铁丝网与无交易环境.txt  文件23-MeasuredMove与结构目标.txt  文件24-最终旗形与趋势末端.txt  文件25-主要趋势反转MTR.txt  文件27-三角形与收敛形态.txt  文件28-双重顶底与微型结构.txt  极速上涨交易策略.txt  极速上涨分析识别.txt  极速下跌交易策略.txt  极速下跌分析识别.txt  逐棒分析检查单.txt  震荡区间交易策略.txt  震荡区间分析识别.txt
scripts/: migrate_records_to_partitioned_layout.py
web/: Dockerfile  docker-compose.yml  pyproject.toml  server.py
web/api/: routes_analyze.py  routes_bars_stream.py  routes_chat.py  routes_data.py  routes_records.py  routes_settings.py
web/bridge/: event_bus.py
web/static/: index.html
web/static/css/: style.css
web/static/js/: api.js  app.js  chart.js  indicators.js
(+64 files in other folders)
